Give carousel specific height to prevent buttons from jumping around.

--- a/public/style.scss
+++ b/public/style.scss
@@ -259,7 +259,7 @@ main {
       margin: 0 0 2vw;
       grid-row: 1 / 2;
       grid-column: 1 / 13;
-      // grid-template-rows: auto 28vw auto;
+      grid-template-rows: auto 34vw auto;
       grid-row-gap: 3vw;
       align-items: center;
 
